external-crates/move/crates/move-compiler/tests/move_check/parser/num_literal_underscore_leading.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03009]: unbound variable
  ┌─ tests/move_check/parser/num_literal_underscore_leading.move:4:17
  │
4 │         let _ = _0u8;
  │                 ^^^^ Unbound variable '_0u8'
